--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "Manga Image Translator (Gemini)",
-  "version": "0.1.0",
-  "description": "Translate text on images (e.g., manga) directly on webpages using Google's Gemini API.",
+  "name": "Image Text Translator",
+  "version": "2.1.0",
+  "description": "Translate text on images (e.g.,manga,manhwa) directly on webpages using LLM",
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "action": {
-    "default_title": "Manga Translator",
-    "default_popup": "popup.html"
+    "default_title": "Image Text Translator",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png"
+    }
   },
   "options_ui": {
     "page": "options.html",
@@ -25,6 +35,12 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"],
       "run_at": "document_idle"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*.png", "icons/*.svg"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
